Tie added and style changes - added a possibility of tie - changed a lil amount of css - fixed .container somethimes staying blurred after clicking .ok - moved the .__footer to a script element

--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ body{
 
 .container{
   --border-rad: 15px;
-  height: 50vh;
+  height: 55vh;
   padding-top: 30px;
   width: 535px;
   background-color: var(--background-color);
@@ -36,6 +36,7 @@ body{
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  gap: 25px;
 }
 
 .board{
@@ -50,6 +51,12 @@ body{
   width: 100%;
   border-bottom-right-radius: var(--border-rad);
   border-bottom-left-radius: var(--border-rad);
+  gap: 15px;
+  margin-top: 20px;
+}
+
+.reset{
+  letter-spacing: 1.5px;
 }
 
 button{
@@ -131,39 +138,3 @@ button{
   border: var(--border-size) solid var(--border-color);
 }
 
-
-
-/* footer */
-/* TODO: convert to a string */
-.footer{
-  background-color: #e2e8f0;
-  position: fixed;
-  bottom: 15px;
-  border: 1px black solid;
-  min-height: 25px;
-  min-width: 140px;
-  max-width: 25%;
-  margin-bottom: 15px;
-  padding: 0 10px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  gap: 5px;
-  padding: 5px 5px;
-}
-
-a.footer-img-link-pfp{
-  height: 25px;
-}
-
-img[src="https://avatars.githubusercontent.com/u/110295543"]{
-  width: 25px;
-  height: 25px;
-  object-fit: cover;
-  border-radius: 50%;
-  transition: transform .7s ease-in-out;
-}
-
-img[src="https://avatars.githubusercontent.com/u/110295543"]:hover{
-  transform: rotate(360deg);
-}
